crates/fundle/tests/proc/bundle_tupled.rs

#[fundle::bundle]
struct Foo(u8);

fn main() {}
